k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doku-backend
  labels:
    app: doku-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doku-backend
  template:
    metadata:
      labels:
        app: doku-backend
    spec:
      containers:
        - name: doku-backend
          image: 96grappe/doku-backend:v1
          ports:
            - containerPort: 4000
