k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doku-front
  labels:
    app: doku-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: doku-front
  template:
    metadata:
      labels:
        app: doku-front
    spec:
      containers:
        - name: doku-front
          image: 96grappe/doku-front:v1
          ports:
            - containerPort: 80
