k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doku-db
spec:
  type: ClusterIP
  selector:
    app: doku-db
  ports:
    - port: 5432
      targetPort: 5432
