k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doku-front
spec:
  type: ClusterIP
  selector:
    app: doku-front
  ports:
    - port: 80
      targetPort: 80
